[package]
name = "kiss-tnc-bridge"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Daemon to bridge Bluetooth KISS TNCs to TCP KISS TNCs"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
configparser = "3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
futures = "0.3"
libc = "0.2"
uuid = "1"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
libdbus-sys = { version = "0.2", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true

[package.metadata.deb]
maintainer = "kotfu"
copyright = "2026"
revision = ""
depends = "$auto, bluez"
section = "net"
assets = [
    ["target/release/kiss-tnc-bridge", "usr/bin/", "755"],
    ["kiss-tnc-bridge.example.conf", "usr/share/kiss-tnc-bridge/kiss-tnc-bridge.example.conf", "644"],
    ["kiss-tnc-bridge.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "debian/"

[package.metadata.generate-rpm]
release = "1"
assets = [
    { source = "target/release/kiss-tnc-bridge", dest = "/usr/bin/kiss-tnc-bridge", mode = "755" },
    { source = "kiss-tnc-bridge.example.conf", dest = "/etc/kiss-tnc-bridge.conf", mode = "644", config = "noreplace" },
    { source = "kiss-tnc-bridge.service", dest = "/lib/systemd/system/kiss-tnc-bridge.service", mode = "644" },
]
requires = { bluez = "*" }
